; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_set_zval_property.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_set_zval_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32*)* @set_zval_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_zval_property(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @Z_OBJCE_P(i32* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @zend_update_property(i32 %8, i32* %9, i8* %10, i32 %12, i32* %13)
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @Z_TRY_DELREF_P(i32* %15)
  ret void
}

declare dso_local i32 @zend_update_property(i32, i32*, i8*, i32, i32*) #1

declare dso_local i32 @Z_OBJCE_P(i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @Z_TRY_DELREF_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
